# search-index

./: .gitignore  Cargo.toml  Makefile  README.md  build.py  pyproject.toml  qgram_index.pyi  query.py  test.tsv
.github/workflows/: release.yml
benches/: benchmark.rs
python/search_index/: __init__.py  __init__.pyi  base.py  index.py  mapping.py  search_index.pyi  similarity.py
src/: data.rs  lib.rs  mapping.rs  prefix.rs  qgram.rs  utils.rs
