[package]
name = "search-index"
version = "0.1.2"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
rayon = "1.10"
rand = "0.9"
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py310", "anyhow"] }
log = "0.4"
pyo3-log = "0.12"
itertools = "0.14"
memmap2 = "0.9"
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.3"
any_ascii = "0.3"
ordered-float = "5"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "benchmark"
harness = false
