[package]
name = "search-index"
version = "0.1.4"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
rayon = "1.10"
rand = "0.9"
pyo3 = { version = "0.24", features = [
  "extension-module",
  "abi3-py310",
  "anyhow",
] }
log = "0.4"
pyo3-log = "0.12"
itertools = "0.14"
memmap2 = "0.9"
any_ascii = "0.3"
ordered-float = "5"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.6"

[[bench]]
name = "benchmark"
harness = false
