[project]
name = "qgram-index"
description = "Q-gram index backed by Rust"
version = "0.4.0"
authors = [
    { name = "Sebastian Walter", email = "swalter@cs.uni-freiburg.de" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"

keywords = ["utilities", "index", "q-gram"]

classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
    "Topic :: Text Processing",
    "Topic :: Utilities"
]

dependencies = []

[project.urls]
Github = "https://github.com/bastiscode/qgram-index"

[build-system]
requires = ["maturin>=1"]
build-backend = "maturin"

[tool.maturin]
module-name = "qgram_index"
