[project]
name = "search-index"
description = "Search indices backed by Rust"
version = "0.1.0"
authors = [
    { name = "Sebastian Walter", email = "swalter@cs.uni-freiburg.de" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"

keywords = ["utilities", "index", "q-gram", "prefix", "search"]

classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
    "Topic :: Text Processing",
    "Topic :: Utilities"
]

dependencies = []

[project.urls]
Github = "https://github.com/bastiscode/search-index"

[build-system]
requires = ["maturin>=1"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"
module-name = "search_index._internal"
